@@ -18,7 +18,6 @@
  */
 package org.codehaus.groovy.tools;
 
-import groovy.lang.GroovyResourceLoader;
 import groovy.lang.GroovySystem;
 import org.codehaus.groovy.control.CompilationUnit;
 import org.codehaus.groovy.control.CompilerConfiguration;
@@ -38,19 +37,22 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import static groovy.ui.GroovyMain.buildConfigScriptText;
+import static groovy.ui.GroovyMain.processConfigScriptText;
 import static groovy.ui.GroovyMain.processConfigScripts;
 
 /**
  * Command-line compiler (aka. <tt>groovyc</tt>).
  */
 public class FileSystemCompiler {
+
+    private static boolean displayStackTraceOnError = false;
     private final CompilationUnit unit;
 
     public FileSystemCompiler(CompilerConfiguration configuration) throws ConfigurationException {
@@ -67,38 +69,40 @@ public class FileSystemCompiler {
         }
     }
 
-    public void compile(String[] paths) throws Exception {
-        unit.addSources(paths);
-        unit.compile();
-    }
-
-    public void compile(File[] files) throws Exception {
-        unit.addSources(files);
-        unit.compile();
-    }
-
-    /** Prints the usage help message for {@link CompilationOptions} to stderr.
+    /**
+     * Prints the usage help message for {@link CompilationOptions} to stderr.
+     *
      * @see #displayHelp(PrintWriter)
-     * @since 2.5 */
+     * @since 2.5
+     */
     public static void displayHelp() {
         displayHelp(new PrintWriter(System.err, true));
     }
 
-    /** Prints the usage help message for the {@link CompilationOptions} to the specified PrintWriter.
-     * @since 2.5 */
-    public static void displayHelp(final PrintWriter writer) {
+    /**
+     * Prints the usage help message for the {@link CompilationOptions} to the specified PrintWriter.
+     *
+     * @since 2.5
+     */
+    public static void displayHelp(PrintWriter writer) {
         configureParser(new CompilationOptions()).usage(writer);
     }
 
-    /** Prints version information to stderr.
-     * @see #displayVersion(PrintWriter) */
+    /**
+     * Prints version information to stderr.
+     *
+     * @see #displayVersion(PrintWriter)
+     */
     public static void displayVersion() {
         displayVersion(new PrintWriter(System.err, true));
     }
 
-    /** Prints version information to the specified PrintWriter.
-     * @since 2.5 */
-    public static void displayVersion(final PrintWriter writer) {
+    /**
+     * Prints version information to the specified PrintWriter.
+     *
+     * @since 2.5
+     */
+    public static void displayVersion(PrintWriter writer) {
         for (String line : new VersionProvider().getVersion()) {
             writer.println(line);
         }
@@ -111,10 +115,10 @@ public class FileSystemCompiler {
             File file = new File(filename);
             if (!file.exists()) {
                 System.err.println("error: file not found: " + file);
-                ++errors;
+                errors += 1;
             } else if (!file.canRead()) {
                 System.err.println("error: file not readable: " + file);
-                ++errors;
+                errors += 1;
             }
         }
 
@@ -124,8 +128,6 @@ public class FileSystemCompiler {
     public static boolean validateFiles(String[] filenames) {
         return checkFiles(filenames) == 0;
     }
-
-    private static boolean displayStackTraceOnError = false;
 
     /**
      * Same as main(args) except that exceptions are thrown out instead of causing
@@ -216,12 +218,13 @@ public class FileSystemCompiler {
         // if there are any joint compilation options set stubDir if not set
         try {
             if ((configuration.getJointCompilationOptions() != null)
-                && !configuration.getJointCompilationOptions().containsKey("stubDir"))
-            {
+                    && !configuration.getJointCompilationOptions().containsKey("stubDir")) {
                 tmpDir = DefaultGroovyStaticMethods.createTempDir(null, "groovy-generated-", "-java-source");
                 configuration.getJointCompilationOptions().put("stubDir", tmpDir);
             }
+
             FileSystemCompiler compiler = new FileSystemCompiler(configuration, unit);
+
             if (lookupUnnamedFiles) {
                 for (String filename : filenames) {
                     File file = new File(filename);
@@ -231,11 +234,8 @@ public class FileSystemCompiler {
                     }
                 }
             } else {
-                compiler.unit.getClassLoader().setResourceLoader(new GroovyResourceLoader() {
-                    public URL loadGroovySource(String filename) throws MalformedURLException {
-                        return null;
-                    }
-                });
+                compiler.unit.getClassLoader()
+                        .setResourceLoader(filename -> null);
             }
             compiler.compile(filenames);
         } finally {
@@ -251,12 +251,16 @@ public class FileSystemCompiler {
         if (filenames == null) {
             return new String[0];
         }
-        List<String> fileList = new ArrayList<String>(filenames.size());
+
+        List<String> fileList = new ArrayList<>(filenames.size());
+
         boolean errors = false;
+
         for (String filename : filenames) {
             if (filename.startsWith("@")) {
                 String fn = filename.substring(1);
                 BufferedReader br = null;
+
                 try {
                     br = new BufferedReader(new FileReader(fn));
                     for (String file; (file = br.readLine()) != null; ) {
@@ -279,6 +283,7 @@ public class FileSystemCompiler {
                 fileList.add(filename);
             }
         }
+
         if (errors) {
             return null;
         } else {
@@ -286,21 +291,48 @@ public class FileSystemCompiler {
         }
     }
 
+    public static void deleteRecursive(File file) {
+        if (!file.exists()) {
+            return;
+        }
+        if (file.isFile()) {
+            file.delete();
+        } else if (file.isDirectory()) {
+            File[] files = file.listFiles();
+            for (File value : files) {
+                deleteRecursive(value);
+            }
+            file.delete();
+        }
+    }
+
+    public void compile(String[] paths) throws Exception {
+        unit.addSources(paths);
+        unit.compile();
+    }
+
+    public void compile(File[] files) throws Exception {
+        unit.addSources(files);
+        unit.compile();
+    }
+
     /**
-     * @since 2.5 */
+     * @since 2.5
+     */
     static class VersionProvider implements IVersionProvider {
         @Override
         public String[] getVersion() {
-            return new String[] {
+            return new String[]{
                     "Groovy compiler version " + GroovySystem.getVersion(),
-                    "Copyright 2003-2018 The Apache Software Foundation. http://groovy-lang.org/",
+                    "Copyright 2003-2019 The Apache Software Foundation. http://groovy-lang.org/",
                     "",
             };
         }
     }
 
     /**
-     * @since 2.5 */
+     * @since 2.5
+     */
     @Command(name = "groovyc",
             customSynopsis = "groovyc [options] <source-files>",
             sortOptions = false,
@@ -331,6 +363,9 @@ public class FileSystemCompiler {
         @Option(names = {"-pa", "--parameters"}, description = "Generate metadata for reflection on method parameter names (jdk8+ only)")
         private boolean parameterMetadata;
 
+        @Option(names = {"-pr", "--enable-preview"}, description = "Enable preview Java features (JEP 12) (jdk12+ only) - must be after classpath but before other arguments")
+        private boolean previewFeatures;
+
         @Option(names = {"-j", "--jointCompilation"}, description = "Attach javac compiler to compile .java files")
         private boolean jointCompilation;
 
@@ -356,8 +391,14 @@ public class FileSystemCompiler {
         private boolean versionRequested;
 
         @Parameters(description = "The groovy source files to compile, or @-files containing a list of source files to compile",
-                    paramLabel = "<source-files>")
+                paramLabel = "<source-files>")
         private List<String> files;
+
+        @Option(names = {"--compile-static"}, description = "Use CompileStatic")
+        private boolean compileStatic;
+
+        @Option(names = {"--type-checked"}, description = "Use TypeChecked")
+        private boolean typeChecked;
 
         public CompilerConfiguration toCompilerConfiguration() throws IOException {
             // Setup the configuration data
@@ -372,30 +413,42 @@ public class FileSystemCompiler {
             }
 
             configuration.setParameters(parameterMetadata);
+            configuration.setPreviewFeatures(previewFeatures);
             configuration.setSourceEncoding(encoding);
             configuration.setScriptBaseClass(scriptBaseClass);
 
             // joint compilation parameters
             if (jointCompilation) {
-                Map<String, Object> compilerOptions = new HashMap<String, Object>();
-                compilerOptions.put("namedValues", javacOptionsList());
-                compilerOptions.put("flags", flagsWithParameterMetaData());
+                Map<String, Object> compilerOptions = new HashMap<>();
+                compilerOptions.put("flags", javacFlags());
+                compilerOptions.put("namedValues", javacNamedValues());
                 configuration.setJointCompilationOptions(compilerOptions);
             }
 
             if (indy) {
-                configuration.getOptimizationOptions().put("int", false);
-                configuration.getOptimizationOptions().put("indy", true);
+                configuration.getOptimizationOptions().put("int", Boolean.FALSE);
+                configuration.getOptimizationOptions().put("indy", Boolean.TRUE);
+            }
+
+            final List<String> transformations = new ArrayList<>();
+            if (compileStatic) {
+                transformations.add("ast(groovy.transform.CompileStatic)");
+            }
+            if (typeChecked) {
+                transformations.add("ast(groovy.transform.TypeChecked)");
+            }
+            if (!transformations.isEmpty()) {
+                processConfigScriptText(buildConfigScriptText(transformations), configuration);
             }
 
             String configScripts = System.getProperty("groovy.starter.configscripts", null);
             if (configScript != null || (configScripts != null && !configScripts.isEmpty())) {
-                List<String> scripts = new ArrayList<String>();
+                List<String> scripts = new ArrayList<>();
                 if (configScript != null) {
                     scripts.add(configScript);
                 }
                 if (configScripts != null) {
-                    scripts.addAll(StringGroovyMethods.tokenize((CharSequence) configScripts, ','));
+                    scripts.addAll(StringGroovyMethods.tokenize(configScripts, ','));
                 }
                 processConfigScripts(scripts, configuration);
             }
@@ -407,41 +460,29 @@ public class FileSystemCompiler {
             return generateFileNamesFromOptions(files);
         }
 
-        String[] javacOptionsList() {
-            if (javacOptionsMap == null) {
-                return null;
+        private String[] javacNamedValues() {
+            List<String> result = new ArrayList<>();
+            if (javacOptionsMap != null) {
+                for (Map.Entry<String, String> entry : javacOptionsMap.entrySet()) {
+                    result.add(entry.getKey());
+                    result.add(entry.getValue());
+                }
             }
-            List<String> result = new ArrayList<String>();
-            for (Map.Entry<String, String> entry : javacOptionsMap.entrySet()) {
-                result.add(entry.getKey());
-                result.add(entry.getValue());
-            }
-            return result.toArray(new String[0]);
+            return result.isEmpty() ? null : result.toArray(new String[0]);
         }
 
-        String[] flagsWithParameterMetaData() {
-            if (flags == null) {
-                return null;
+        private String[] javacFlags() {
+            List<String> result = new ArrayList<>();
+            if (flags != null) {
+                result.addAll(flags);
             }
             if (parameterMetadata) {
-                flags.add("parameters");
+                result.add("parameters");
             }
-            return flags.toArray(new String[0]);
-        }
-    }
-
-    public static void deleteRecursive(File file) {
-        if (!file.exists()) {
-            return;
-        }
-        if (file.isFile()) {
-            file.delete();
-        } else if (file.isDirectory()) {
-            File[] files = file.listFiles();
-            for (int i = 0; i < files.length; i++) {
-                deleteRecursive(files[i]);
+            if (previewFeatures) {
+                result.add("-enable-preview");
             }
-            file.delete();
+            return result.isEmpty() ? null : result.toArray(new String[0]);
         }
     }
 }
