@@ -39,6 +39,7 @@ import org.codehaus.groovy.transform.trait.TraitASTTransformation;
 import org.codehaus.groovy.transform.trait.Traits;
 
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -56,10 +57,6 @@ import java.util.TreeMap;
  * <p>
  * This visitor is only intended to be executed once, during the
  * SEMANTIC_ANALYSIS phase of compilation.
- *
- * @author Danno Ferrin (shemnon)
- * @author Roshan Dawrani (roshandawrani)
- * @author Jochen Theodorou (blackdrag)
  */
 public class ASTTransformationCollectorCodeVisitor extends ClassCodeVisitorSupport {
     private final SourceUnit source;
@@ -223,8 +220,8 @@ public class ASTTransformationCollectorCodeVisitor extends ClassCodeVisitorSuppo
                     Class klass = loadTransformClass(className, aliasNode);
                     if (klass != null) {
                         try {
-                            act = (AnnotationCollectorTransform) klass.newInstance();
-                        } catch (InstantiationException | IllegalAccessException e) {
+                            act = (AnnotationCollectorTransform) klass.getDeclaredConstructor().newInstance();
+                        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                             source.getErrorCollector().addErrorAndContinue(new ExceptionMessage(e, true, source));
                         }
                     }
